--- a/.github/workflows/policy.yml
+++ b/.github/workflows/policy.yml
@@ -7,11 +7,20 @@ on:
     branches: [main]
 
 jobs:
-  policy:
+  errors:
+    name: Errors
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - run: python3 tools/policy/check_errors.py
+
+  ascii:
+    name: ASCII
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - run: python3 tools/policy/check_ascii.py
