Add typed AST wrappers and wire through DB
- Add AstNode trait, typed wrappers for all 37 node kinds
- Add typed token wrappers (Ident, Keyword, LiteralToken)
- Replace AstId with opaque AstId<N> and ErasedAstId
- Add AstIdMap with preorder-index identity model
- Add ast_root, ast_id_map, file_diagnostics queries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bumpalo = { version = "3", features = ["collections"] }
 text-size = "1"
 rowan = "0.16"
 salsa = "0.19"
+smallvec = "1"
 insta = { version = "1", features = ["glob"] }
 
 [workspace.lints.rust]
