--- a/crates/lyra-ast/Cargo.toml
+++ b/crates/lyra-ast/Cargo.toml
@@ -12,3 +12,4 @@ lyra-source.workspace = true
 lyra-lexer.workspace = true
 lyra-parser.workspace = true
 rowan.workspace = true
+smallvec.workspace = true
