Add LineIndex, incremental cache tests, and docs
- Add LineIndex/LineCol in lyra-source with checked offset math
- Add line_index query and update_file_text helper in lyra-db
- Add EventDb and 3 cache-hit tests proving per-file isolation
- Replace incremental.md TODO with query DAG documentation
- Allow cast_possible_truncation at workspace level, remove local allow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,5 @@ module_name_repetitions = "allow"
 must_use_candidate = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
+# TextSize is u32; usize-to-u32 casts are safe for source-file-sized data.
+cast_possible_truncation = "allow"
