Add module-local name resolution
- Add Declarator AST node wrapping each declarator
- Rewrite lyra-semantic with symbols, scopes, builder
- Add DefIndex/ResolveIndex split Salsa queries
- Wire resolve_at and file_diagnostics in lyra-db
- Add structured SemanticDiag with typed payloads

--- a/crates/lyra-semantic/Cargo.toml
+++ b/crates/lyra-semantic/Cargo.toml
@@ -11,4 +11,6 @@ workspace = true
 lyra-source.workspace = true
 lyra-ast.workspace = true
 lyra-diag.workspace = true
-lyra-arena.workspace = true
+lyra-lexer.workspace = true
+lyra-parser.workspace = true
+smol_str.workspace = true
