--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ text-size = "1"
 rowan = "0.16"
 salsa = "0.19"
 smallvec = "1"
+smol_str = "0.3"
 insta = { version = "1", features = ["glob"] }
 
 [workspace.lints.rust]
