Add offset-independent NameGraph for resolve caching
- Add SymbolNameLookup trait to decouple resolve from SymbolTable
- Add NameGraph type projecting offset-free facts from DefIndex
- Split resolve into build_resolve_core and build_resolve_index
- Add name_graph_file and resolve_core_file Salsa queries
- Whitespace edits now skip resolve_core via Salsa backdating

--- a/crates/lyra-semantic/Cargo.toml
+++ b/crates/lyra-semantic/Cargo.toml
@@ -14,3 +14,6 @@ lyra-diag.workspace = true
 lyra-lexer.workspace = true
 lyra-parser.workspace = true
 smol_str.workspace = true
+
+[dev-dependencies]
+lyra-preprocess.workspace = true
