--- a/crates/lyra-db/Cargo.toml
+++ b/crates/lyra-db/Cargo.toml
@@ -17,3 +17,4 @@ lyra-ast.workspace = true
 lyra-semantic.workspace = true
 lyra-arena.workspace = true
 salsa.workspace = true
+smol_str.workspace = true
