Add constant expression evaluation (#27)
- Pure evaluator for literals, arithmetic, $clog2
- Salsa eval_const_int query with cycle recovery
- ConstExprRef interned key for const expressions
- Parser combines IntLiteral+BasedLiteral (no trivia)
- Dense symbol_to_decl and decl_to_init_expr indexes
- AstIdMap erased_ast_id and get_node methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,5 +39,7 @@ module_name_repetitions = "allow"
 must_use_candidate = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
+# rowan NodeOrToken not directly in scope for method reference syntax
+redundant_closure_for_method_calls = "allow"
 # TextSize is u32; usize-to-u32 casts are safe for source-file-sized data.
 cast_possible_truncation = "allow"
