Add type_of_symbol query with typedef expansion
- Two-layer Salsa query: raw extraction + dim normalization
- SymbolType enum: Value, TypeAlias, Net, Error
- Pure type extractor in lyra-semantic (type_extract.rs)
- Single-step typedef expansion with cycle recovery
- Port typedef resolution via TypeSpec name refs
- Split lyra-db tests into domain submodules
- Add file line-count policy check (800 warn / 1200 hard)

--- a/.github/workflows/policy.yml
+++ b/.github/workflows/policy.yml
@@ -24,3 +24,12 @@ jobs:
         with:
           fetch-depth: 0
       - run: python3 tools/policy/check_ascii.py
+
+  lines:
+    name: Line count
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - run: python3 tools/policy/check_lines.py
