Add error granularity, typedef dims, and lyra-cli
- Add SymbolTypeError::{TypedefUnderlyingUnsupported, PortTypeMissing}
- Parse unpacked dims on typedef declarations
- Extract typedef unpacked dims in type_extract
- Add lyra-cli crate with dump-tree command
- Add 7 regression tests for error kinds and dim merging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ lyra-parser = { path = "crates/lyra-parser" }
 lyra-ast = { path = "crates/lyra-ast" }
 lyra-semantic = { path = "crates/lyra-semantic" }
 lyra-db = { path = "crates/lyra-db" }
+lyra-cli = { path = "crates/lyra-cli" }
 
 # external
 bumpalo = { version = "3", features = ["collections"] }
