Add module signatures, instance tree, and port diagnostics
- Add module_signature query from AST header traversal
- Build instance tree with cycle detection via active stack
- Resolve named/positional port connections with diagnostics
- Add CLI check command with --top for elaboration
- Move wrap_unpacked to types.rs, use SmallVec for dims

--- a/crates/lyra-cli/Cargo.toml
+++ b/crates/lyra-cli/Cargo.toml
@@ -15,7 +15,9 @@ lyra-preprocess.workspace = true
 lyra-parser.workspace = true
 lyra-ast.workspace = true
 lyra-semantic.workspace = true
+lyra-diag.workspace = true
 lyra-db.workspace = true
+smol_str.workspace = true
 
 [lints]
 workspace = true
