Reorganize test corpus into nested directory structure
- Restructure corpus from flat lrm_chXX_name/ to lrm/chXX/name/
- Move regression tests into regression/ subdirectory
- Add test.yaml marker files with typed metadata for discovery
- Rewrite corpus runner with walkdir-based discovery
- Validate LRM path/metadata consistency and deny unknown fields
- Update lrm-add skill, gaps.md, and signoff docs for new paths
- Delete old per-case snapshot files (regenerated in next commit)

--- a/crates/lyra-tests/Cargo.toml
+++ b/crates/lyra-tests/Cargo.toml
@@ -17,3 +17,6 @@ lyra-diag.workspace = true
 
 [dev-dependencies]
 insta = { workspace = true }
+walkdir = { workspace = true }
+serde = { workspace = true }
+serde_yaml = "0.9"
