--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ salsa = "0.19"
 smallvec = "1"
 smol_str = "0.3"
 insta = { version = "1", features = ["glob"] }
+walkdir = "2"
+serde = { version = "1", features = ["derive"] }
 
 [workspace.lints.rust]
 unused_must_use = "warn"
