Add indexing and part-select type inference
- Introduce PackedDims with Arc + offset for O(1) peel
- Add RangeKind enum and parser ExprMode::Bracket
- Rewrite infer_index with classify/apply dispatch
- Add infer_range for fixed and indexed part-selects
- Remove symbol_type_of_name from InferCtx trait
- Fix part-select width overflow on extreme bounds

--- a/crates/lyra-ast/Cargo.toml
+++ b/crates/lyra-ast/Cargo.toml
@@ -13,3 +13,6 @@ lyra-lexer.workspace = true
 lyra-parser.workspace = true
 rowan.workspace = true
 smallvec.workspace = true
+
+[dev-dependencies]
+lyra-preprocess.workspace = true
