Add Site type alias, NameSpan sentinel, and _site vocabulary
- Add NameSpan::INVALID sentinel with unmappable text_range()
- Make NameSpan non-optional on Symbol, EnumMemberDef, RecordField, LocalDecl
- Add text_range_or(fallback) for diagnostic consumers
- Create Site type alias (= ErasedAstId) in lyra-semantic
- Rename all _ast fields/variables to _site across both crates
- Rename symbol_at_name_ast to symbol_at_name_site
- Replace silent fallbacks with InternalError + early return
- Move resolve diagnostic helpers to resolve_index.rs
- Add CST layering check to CI policy workflow

--- a/.github/workflows/policy.yml
+++ b/.github/workflows/policy.yml
@@ -33,3 +33,12 @@ jobs:
         with:
           fetch-depth: 0
       - run: python3 tools/policy/check_lines.py
+
+  cst-layering:
+    name: CST layering
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - run: python3 tools/policy/check_cst_layering.py
